modals fixed on mobile devices some other changes

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -2,9 +2,14 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+a:link, a:active, a:hover, a:visited {
+  outline: none;
+}
+
 body {
   background-color: #F5F5F5;
   margin-bottom: 40px;
+  padding: 0;
   //margin-top: 80px;
 }
 
@@ -82,8 +87,8 @@ body {
 
 #dropdown-protocol {
   top: auto;
+  left: inherit;
   min-width: auto;
-  left: 47px;
 
   text-align: left;
 }
