--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -5,10 +5,11 @@ label[for] {
 label.valid {
   width: 24px;
   height: 24px;
-  background: url(/assets/valid.png) center center no-repeat;
+  background: image-url('valid.png') center center no-repeat;
   display: inline-block;
   text-indent: -9999px;
 }
+
 label.error {
   color: red;
   margin-top: 2px;
@@ -17,6 +18,21 @@ label.error {
 .modal {
   width: 400px;
   margin-left: -200px;
+  left: 50%;
+
+  position: fixed;
+  top: 3%;
+  //right: 3%;
+  //left: 3%;
+  //width: auto;
+  //margin: 0;
+}
+
+.modal-body {
+  max-height: 350px;
+  padding: 15px;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 .modal-body .control-label {
@@ -34,6 +50,10 @@ label.error {
   text-align: left;
 }
 
+.social_login_buttons a:hover {
+  text-decoration: none;
+}
+
 .social_login_buttons .title {
   color: #9C9C9C;
   font-family: Arial,sans-serif;
@@ -45,7 +65,7 @@ label.error {
 .social_login_buttons button {
   border: 0 none;
   display: inline-block;
-  margin: 0;
+  margin-left: 5px;
   outline: 0 none;
   padding: 0;
 }
